# construction-work

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  cloudbuild.yaml  leptosfmt.toml
.cargo/: config.toml
.zed/: settings.json
app/: Cargo.toml
app/src/: lib.rs
app/src/components/: advantages_banner.rs  billboard.rs  button.rs  card.rs  footer.rs  header.rs  image.rs  input.rs  link.rs  logo.rs  mod.rs  navigation.rs
app/src/components/card/: banner.rs  feature.rs  mod.rs
app/src/components/header/: mod.rs  navigation.rs  search.rs
app/src/pages/: about.rs  contact_us.rs  home.rs  mod.rs
app/src/routes/: about.rs  auth.rs  cart.rs  contact_us.rs  home.rs  mod.rs  not_found.rs  search.rs
database/: Cargo.toml
database/src/: lib.rs
frontend/: Cargo.toml
frontend/src/: lib.rs
locales/: cs.json  en.json
public/: tailwind.css
server/: Cargo.toml
server/src/: main.rs
src/: app.rs  lib.rs  main.rs
src/components/: billboard.rs  button.rs  footer.rs  header.rs  link.rs  mod.rs  navigation.rs
src/pages/: about.rs  home.rs  mod.rs
style/: input.css  tailwind.css
